--- a/src/libraries/sophia/platform/CMakeLists.txt
+++ b/src/libraries/sophia/platform/CMakeLists.txt
@@ -2,24 +2,6 @@ SET (PLATFORM_LIBRARY_NAME sophia_platform)
 
 message(STATUS "Adding " ${PLATFORM_LIBRARY_NAME} " library")
 
-# -------------------------------
-# Unity
-# -------------------------------
-SET(UNITY_INSTALL_LOCATION "C:/Program Files/Unity/Hub/Editor")
-SET(SOPHIA_UNITY_INSTALL_DIRECTORY ${UNITY_INSTALL_LOCATION} CACHE STRING "Setup Unity install directory")
-
-SET(UNITY_VERSION "2019.3.0f1")
-SET(SOPHIA_UNITY_VERSION ${UNITY_VERSION} CACHE STRING "Setup Unity version")
-
-# When the install location is not found or when the unity version is not found,
-#   we cannot continue generating the project.
-if(NOT EXISTS "${SOPHIA_UNITY_INSTALL_DIRECTORY}")
-    message(FATAL_ERROR "Could not find Unity install location")
-endif()
-if(NOT EXISTS "${SOPHIA_UNITY_INSTALL_DIRECTORY}/${SOPHIA_UNITY_VERSION}")
-    message(FATAL_ERROR "Could not find Unity version")
-endif()
-
 # --------------------------
 # Setup sources
 # --------------------------
@@ -49,7 +31,7 @@ SETUP_WORKING_DIRECTORY(${PLATFORM_LIBRARY_NAME})
 set_property(TARGET ${PLATFORM_LIBRARY_NAME} PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.0")
 set_property(TARGET ${PLATFORM_LIBRARY_NAME} PROPERTY VS_DOTNET_REFERENCES 
                     "System"
-                    "${SOPHIA_UNITY_INSTALL_DIRECTORY}/${SOPHIA_UNITY_VERSION}/${UNITY_BINDIR}/UnityEngine.dll")
+                    "${UNITY_ENGINE_DLL}")
 
 target_link_libraries(${PLATFORM_LIBRARY_NAME} PUBLIC sophia_core)
 
