Install PDB files

--- a/src/libraries/sophia/core/CMakeLists.txt
+++ b/src/libraries/sophia/core/CMakeLists.txt
@@ -45,6 +45,7 @@ set_property(TARGET ${CORE_LIBRARY_NAME} PROPERTY VS_DOTNET_REFERENCES
 SETUP_INSTALL_DIRECTORIES(${CORE_LIBRARY_NAME} sophia_core_targets ${SOPHIA_UNITY_VERSION})
 
 INSTALL_DIRECTORY("${CURRENT_CORE_PATH}/src/" ${SOPHIA_INC_INSTALL_DIR})
+INSTALL_PDB(${CORE_LIBRARY_NAME} ${SOPHIA_UNITY_VERSION})
 
 # --------------------------
 # Tests.
