--- a/src/libraries/sophia/platform/CMakeLists.txt
+++ b/src/libraries/sophia/platform/CMakeLists.txt
@@ -41,3 +41,4 @@ target_link_libraries(${PLATFORM_LIBRARY_NAME} PUBLIC sophia_core)
 SETUP_INSTALL_DIRECTORIES(${PLATFORM_LIBRARY_NAME} sophia_platform_targets ${SOPHIA_UNITY_VERSION})
 
 INSTALL_DIRECTORY("${CURRENT_PLATFORM_PATH}/src/" ${SOPHIA_INC_INSTALL_DIR})
+INSTALL_PDB(${PLATFORM_LIBRARY_NAME} ${SOPHIA_UNITY_VERSION})
