--- a/src/libraries/sophia/editor/CMakeLists.txt
+++ b/src/libraries/sophia/editor/CMakeLists.txt
@@ -42,3 +42,4 @@ target_link_libraries(${EDITOR_LIBRARY_NAME} PUBLIC sophia_core)
 SETUP_INSTALL_DIRECTORIES(${EDITOR_LIBRARY_NAME} sophia_editor_targets ${SOPHIA_UNITY_VERSION})
 
 INSTALL_DIRECTORY("${CURRENT_EDITOR_PATH}/src/" ${SOPHIA_INC_INSTALL_DIR})
+INSTALL_PDB(${EDITOR_LIBRARY_NAME} ${SOPHIA_UNITY_VERSION})
