--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,26 @@
+# -------------------------------
+# Unity
+# -------------------------------
+SET(UNITY_INSTALL_LOCATION "C:/Program Files/Unity/Hub/Editor")
+SET(SOPHIA_UNITY_INSTALL_DIRECTORY ${UNITY_INSTALL_LOCATION} CACHE PATH "Setup Unity install directory")
+
+SET(UNITY_VERSION "2019.3.0f1")
+SET(SOPHIA_UNITY_VERSION ${UNITY_VERSION} CACHE STRING "Setup Unity version")
+
+SET(UNITY_ENGINE_DLL "${SOPHIA_UNITY_INSTALL_DIRECTORY}/${SOPHIA_UNITY_VERSION}/${UNITY_BINDIR}/UnityEngine.dll")
+SET(UNITY_EDITOR_DLL "${SOPHIA_UNITY_INSTALL_DIRECTORY}/${SOPHIA_UNITY_VERSION}/${UNITY_BINDIR}/UnityEditor.dll")
+
+# When the install location is not found or when the unity version is not found,
+#   we cannot continue generating the project.
+if(NOT EXISTS "${SOPHIA_UNITY_INSTALL_DIRECTORY}")
+    message(FATAL_ERROR "Could not find Unity install location")
+endif()
+if(NOT EXISTS "${SOPHIA_UNITY_INSTALL_DIRECTORY}/${SOPHIA_UNITY_VERSION}")
+    message(FATAL_ERROR "Could not find Unity version")
+endif()
+
 # --------------------------------
 # Add subdirectories
 # --------------------------------
+add_subdirectory(extern)
 add_subdirectory(libraries)
