--- a/src/extern/CMakeLists.txt
+++ b/src/extern/CMakeLists.txt
@@ -1,4 +1,4 @@
 # --------------------------------
 # Add subdirectories
 # --------------------------------
-add_subdirectory(Json)
+add_subdirectory(json)
