Upgrade to 4.5 Support Json in sophia.core

--- a/src/libraries/sophia/core/CMakeLists.txt
+++ b/src/libraries/sophia/core/CMakeLists.txt
@@ -35,9 +35,10 @@ target_include_directories(${CORE_LIBRARY_NAME} PUBLIC
 # --------------------------
 # Target link libraries.
 # --------------------------
-set_property(TARGET ${CORE_LIBRARY_NAME} PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.0")
+set_property(TARGET ${CORE_LIBRARY_NAME} PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.5")
 set_property(TARGET ${CORE_LIBRARY_NAME} PROPERTY VS_DOTNET_REFERENCES 
-                    "System")
+                    "System"
+                    "Newtonsoft.Json")
 
 # --------------------------
 # Install.
