Disable json serialization/deserialization (temp)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,5 +22,5 @@ endif()
 # --------------------------------
 # Add subdirectories
 # --------------------------------
-add_subdirectory(extern)
+#add_subdirectory(extern)
 add_subdirectory(libraries)
