Just target link to newtonsoft.

--- a/src/libraries/sophia/core/CMakeLists.txt
+++ b/src/libraries/sophia/core/CMakeLists.txt
@@ -37,8 +37,7 @@ target_include_directories(${CORE_LIBRARY_NAME} PUBLIC
 # --------------------------
 set_property(TARGET ${CORE_LIBRARY_NAME} PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.5")
 set_property(TARGET ${CORE_LIBRARY_NAME} PROPERTY VS_DOTNET_REFERENCES 
-                    "System"
-                    "Newtonsoft.Json")
+                    "System")
 
 target_link_libraries(${CORE_LIBRARY_NAME} PUBLIC "Newtonsoft.Json")
 
