--- a/.editorconfig
+++ b/.editorconfig
@@ -103,7 +103,7 @@ dotnet_style_prefer_conditional_expression_over_return = false:suggestion
 dotnet_style_prefer_compound_assignment = true:warning
 # Null-checking preferences
 # https://docs.microsoft.com/visualstudio/ide/editorconfig-language-conventions#null-checking-preferences
-dotnet_style_coalesce_expression = true:warning
+dotnet_style_coalesce_expression = false:warning
 dotnet_style_null_propagation = true:warning
 # Parameter preferences
 # https://docs.microsoft.com/visualstudio/ide/editorconfig-language-conventions#parameter-preferences
