--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,33 +3,45 @@
 # -------------------------------
 cmake_minimum_required(VERSION 3.10)
 
-message(STATUS "Architecture: ${CMAKE_GENERATOR_PLATFORM}")
+# -------------------------------
+# Sophia Version
+# -------------------------------
+SET(VERSION_MAJOR 0)
+SET(VERSION_MINOR 1)
+SET(VERSION_PATCH 0)
+
+# -------------------------------
+# Configurations
+# -------------------------------
+SET(CONFIGURATION_DEBUG Debug)
+SET(CONFIGURATION_RELWITHDEBINFO RelWithDebInfo)
+SET(CONFIGURATION_MINSIZEREL Release)
+SET(CONFIGURATION_RELEASE Release)
 
 # -------------------------------
 # Setup the "DAE" solution
 # -------------------------------
-include(cmake\\version.txt)
-
 project(DAE VERSION     "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
             LANGUAGES   CSharp)
 
-message(STATUS "Generating project: ${PROJECT_NAME} v${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
+message(STATUS "#--------------------- Starting project generation ---------------------")
+message("CMake Version: \t\t${CMAKE_VERSION}")
+message("Architecture: \t\t${CMAKE_GENERATOR_PLATFORM}")
+message("Generating project: \t${PROJECT_NAME} v${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
 
 # -------------------------------
 # CMake dependencies
 # -------------------------------
-include(GNUInstallDirs)
-
 include(cmake\\directories.txt)
 include(cmake\\macros.txt)
+
+include(GNUInstallDirs)
 
 # --------------------------
 # Setup global properties
 # --------------------------
 SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
 SET(CMAKE_DEBUG_POSTFIX _d)
-
-OPTION(SOPHIA_ENABLE_TESTS "Add tests to the solution" OFF)
 
 # ------------------------
 # Setup CMAKE output directories
@@ -47,15 +59,25 @@ SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL      "${OUTPUT_BINDIR}/${CONFIGUR
 SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO  "${OUTPUT_BINDIR}/${CONFIGURATION_RELWITHDEBINFO}")
 SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE         "${OUTPUT_BINDIR}/${CONFIGURATION_RELEASE}")
 
-message(STATUS "Output directory: ${OUTPUT_BINDIR}")
+message("Output directory: \t\t${OUTPUT_BINDIR}")
 
-add_subdirectory(src)
+add_subdirectory(${SRC_DIR})
 
 # --------------------------------
 # Install readme and license file.
 # --------------------------------
-INSTALL_DIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/resources" ${SOPHIA_ADDITIONAL_FILES_INSTALL_DIR})
+# Resources
+# 	- branding
+install(DIRECTORY 	"${CMAKE_CURRENT_SOURCE_DIR}/resources"
+    	DESTINATION "${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}"
+    	FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ WORLD_READ
+    	DIRECTORY_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE" "${CMAKE_CURRENT_SOURCE_DIR}/README.md"
-    	DESTINATION ${SOPHIA_ADDITIONAL_FILES_INSTALL_DIR}
+# Documentation
+# 	- License
+# 	- Readme
+install(FILES 		"${CMAKE_CURRENT_SOURCE_DIR}/LICENSE" "${CMAKE_CURRENT_SOURCE_DIR}/README.md"
+    	DESTINATION "${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}"
 		PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+
+message(STATUS "#---------------------- Ending project generation ----------------------")	
