ci(tests): Spelling mistake and only Release build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,11 +3,7 @@ version: '{branch}-{build}'
 skip_tags: true
 
 image: Visual Studio 2019
-configuration:
-
-- Release
-
-- Debug
+configuration: Release
 
 environment:
   nodejs_version: 12
@@ -30,7 +26,7 @@ build:
   verbosity: minimal
 
 test_script:
-  - .\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -returntargetcode -register:user -target:"dotnet.exe" -targetargs:"test Sohia.Tests\bin\Release\netcoreapp3.1\Sophia.Tests.dll" -output:"coverage.xml" -filter:"+[Sophia*]* -[Sophia.Tests*]* "
+  - .\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -returntargetcode -register:user -target:"dotnet.exe" -targetargs:"test Sophia.Tests\bin\Release\netcoreapp3.1\Sophia.Tests.dll" -output:"coverage.xml" -filter:"+[Sophia*]* -[Sophia.Tests*]* "
   - codecov -f "coverage.xml"
 
 before_package:
