--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,9 @@ version: '{branch}-{build}'
 skip_tags: true
 
 image: Visual Studio 2019
-configuration: Debug
+configuration:
+    - Debug
+    - Release
 
 environment:
   nodejs_version: 12
