--- a/Sophia.Tests/Sophia.Tests.csproj
+++ b/Sophia.Tests/Sophia.Tests.csproj
@@ -9,13 +9,19 @@
   <ItemGroup>
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Sophia.Core\Sophia.Core.csproj" />
     <ProjectReference Include="..\Sophia.Editor\Sophia.Editor.csproj" />
     <ProjectReference Include="..\Sophia.Platform\Sophia.Platform.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="UnityEngine">
+      <HintPath>..\Libraries\Unity\UnityEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
