--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -10,7 +10,7 @@ jobs:
         id: getManualLicenseFile
         uses: webbertakken/unity-request-manual-activation-file@v1.1
         with:
-          unityVersion: 2019.3.0f
+          unityVersion: 2019.3.0f6
       # Upload artifact (Unity_v20XX.X.XXXX.alf)
       - name: Expose as artifact
         uses: actions/upload-artifact@v1
